<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/menuBg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/hello_world"
            android:padding="48dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/statusLabel"
            android:paddingTop="48dp"/>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="36sp"
            android:textStyle="bold"
            android:paddingTop="12dp"/>
    </LinearLayout>

    <com.fflorio.library.hookedslidingmenu.ui.HookedMenuLayout
        android:id="@+id/hookedMenu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/hook"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/hook"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:id="@+id/menuContent"
            android:layout_width="@dimen/menuContentWidth"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="@drawable/menu_background">

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn1"/>

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn2"/>

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn3"/>

        </LinearLayout>


    </com.fflorio.library.hookedslidingmenu.ui.HookedMenuLayout>
</FrameLayout>